# mcp-git-commit-generator

./: .dockerignore  .gitignore  .markdownlint.jsonc  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  start-mcp-server.sh
.github/: copilot-instructions.md
.github/actions/test-python/: action.yml
.github/workflows/: docker-publish.yml  pypi-publish.yml
inspector/: package-lock.json  package.json
src/: __init__.py  server.py
src/git_commit_generator/: __init__.py  __main__.py  server.py
src/mcp_git_commit_generator/: __init__.py  __main__.py  server.py
tests/: test_server.py
