[project]
name = "mcp-git-commit-generator"
version = "2.0.1"
description = "Generate conventional commit messages from your staged git changes using Model Context Protocol (MCP)."
authors = [{ name = "Theoklitos Bampouris", email = "th.bampouris@gmail.com" }]
license = { text = "MIT" }
maintainers = [
    { name = "Theoklitos Bampouris", email = "th.bampouris@gmail.com" },
]
keywords = [
    "mcp",
    "model context protocol",
    "git",
    "commit",
    "conventional commits",
    "conventional commit messages",
]
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = ["click>=8.2.1", "mcp[cli]>=1.10.1"]

[dependency-groups]
dev = ["debugpy>=1.8.14", "pre-commit>=4.2.0"]

[project.scripts]
mcp-git-commit-generator = "mcp_git_commit_generator:main"
